done with rust side of dev server setup

--- a/packages/celer-web-app/public/index.html
+++ b/packages/celer-web-app/public/index.html
@@ -16,12 +16,12 @@
       name="description"
       content="Celer - A Route Engine for BotW"
     />
-    <meta property="og:site_name" content="Piston Apps"/>
+    <meta property="og:site_name" content="itntpiston.app"/>
     <meta property="og:title" content="Celer">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://itntpiston.github.io/celer">
+    <meta property="og:url" content="https://celer.itntpiston.app/#/">
     <meta property="og:description" content="A Route Engine for BotW">
-    <meta property="og:image" content="https://itntpiston.github.io/celer/celer.png">
+    <meta property="og:image" content="https://celer.itntpiston.app/celer.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/celer.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
